# dreid-pack

./: Cargo.toml  README.md
.github/workflows/: bench.yml  release.yml
crates/dreid-pack/: Cargo.toml
crates/dreid-pack-bench/: Cargo.toml
crates/dreid-pack-bench/data/db379/: 1DPT.cif  1DQ0.cif  1DV7.cif  1DYS.cif  1E5M.cif  1E6F.cif  1EDQ.cif  1ELK.cif  1ERZ.cif  1ES5.cif  1ES9.cif  1F41.cif  1F60.cif  1F94.cif  1FCQ.cif  1FO9.cif  1FPO.cif  1FTR.cif  1G61.cif  1G8A.cif  1G8Q.cif  1GMU.cif  1GO3.cif  1GPP.cif  1GQN.cif  1GSO.cif  1GVP.cif  1GXN.cif  1H03.cif  1H4A.cif  1H4Y.cif  1HCL.cif  1HM5.cif  1HZ6.cif  1HZ9.cif  1I4J.cif  1IGQ.cif  1IJQ.cif  1IJY.cif  1ILK.cif  (+312 more)
crates/dreid-pack-bench/src/: bfactor.rs  config.rs  error.rs  format.rs  lib.rs  main.rs  output.rs  residue.rs  rmsd.rs
crates/dreid-pack-bench/src/bfactor/: mod.rs  parser.rs
crates/dreid-pack-bench/src/chi/: compare.rs  extract.rs  geometry.rs  mod.rs  symmetry.rs
crates/dreid-pack-bench/src/rmsd/: mod.rs  sidechain.rs
crates/dreid-pack/src/: lib.rs
crates/dreid-pack/src/io/: config.rs  error.rs  session.rs
crates/dreid-pack/src/model/: residue.rs  types.rs
crates/dreid-pack/src/pack/: config.rs  constant.rs  progress.rs
crates/dreid-pack/src/pack/model/: conformation.rs  energy.rs  spatial.rs
crates/dreid-pack/src/pack/phase/: dee.rs  dp.rs  mod.rs  pair.rs  prune.rs  sample.rs
src/: lib.rs
src/io/: config.rs  convert.rs  error.rs  mod.rs  order.rs  session.rs
src/model/: mod.rs  residue.rs  system.rs  types.rs
src/pack/: config.rs  constant.rs  energy.rs  mod.rs
src/pack/model/: conformation.rs  energy.rs  fixed.rs  graph.rs  junction.rs  mod.rs  spatial.rs
src/pack/phase/: dee.rs  dp.rs  graph.rs  mod.rs  pair.rs  prune.rs  sample.rs
