[workspace]
resolver = "3"
members = ["crates/dreid-pack", "crates/dreid-pack-bench"]

[workspace.package]
version = "0.1.0"
authors = [
    "Tony Kan <tonykan@caltech.edu>",
    "William A. Goddard III <wag@caltech.edu>",
]
license = "MIT"
repository = "https://github.com/caltechmsc/dreid-pack"
edition = "2024"
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
