[package]
name = "dreid-pack-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
publish = false

[dependencies]
dreid-pack = { path = "../dreid-pack" }

[lib]
name = "dreid_pack_bench"
path = "src/lib.rs"
