[package]
name = "dreid-pack-bench"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
publish = false

[dependencies]
dreid-pack = { path = "../dreid-pack" }
bio-forge = "0.4.1"
arrayvec = "0.7.6"
thiserror = "2.0.18"

[lib]
name = "dreid_pack_bench"
path = "src/lib.rs"
